logs/hub_cron.log
 * Serving Flask app 'watson_aristotle_hub'
 * Debug mode: off
Address already in use
Port 5205 is in use by another program. Either identify and stop that program, or start the server with a different port.
 * Serving Flask app 'watson_aristotle_hub'
 * Debug mode: off
Address already in use
Port 5205 is in use by another program. Either identify and stop that program, or start the server with a different port.
 * Serving Flask app 'watson_aristotle_hub'
 * Debug mode: off
Address already in use
Port 5205 is in use by another program. Either identify and stop that program, or start the server with a different port.
 * Serving Flask app 'watson_aristotle_hub'
 * Debug mode: off
Address already in use
Port 5205 is in use by another program. Either identify and stop that program, or start the server with a different port.
 * Serving Flask app 'watson_aristotle_hub'
 * Debug mode: off
Address already in use
Port 5205 is in use by another program. Either identify and stop that program, or start the server with a different port.
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
